--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -22,54 +22,51 @@ hr {
     color: #cc080b;
     font-weight: bold;
 }
+
 .recipe,
 .image,
 .recipe-name {
     position: relative;
-    top: 50px;
+    top: 60px;
+    margin-left: 50px;
 
-}
+} 
 .image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
     width: 20%;
     border: #cc080b 5px solid;
     border-radius: 10px;
 }
 .recipe-name {
-    text-align: center;
-    position: relative;
-    top:  100px;
+   
+    top:  20px;
     font-size: 35px;
     color: #cc080b;
-}
-h3 {
-    text-align: center;
-    font-style: italic;
-    font-size: 30px;
-    position: relative;
-    bottom: 200px;
 }
 
 h4 {
     font-size: 25px;
-    position: relative;
-    left: 200px;
+    margin-left: 40px;
+    color: #cc080b;
+
 }
 .desc-container {
     position: relative;
-    bottom: 230px;
+    top: 150px;
     margin-left: 40px;
     font-size: 20px;
     line-height: 1rem;
+    margin-left: 100px;
+    font-style: italic;
+
 }
 .ings-container {
     position: relative;
-    bottom: 200px;
+    top: 200px;
     font-size: 20px;
     list-style-type: none;
-    line-height: 1.5em;
+    line-height: 1.75em;
+    margin-left: 50px;
+
 }
 ul li {
     list-style-type: none;
@@ -77,30 +74,33 @@ ul li {
 .procedure-container {
     font-size: 20px;
     position: absolute;
-    left: 1500px;
+    left: 1000px;
     top: 500px;
     line-height: 3rem;
+} 
+ol {
+    margin-left: 20px;
 }
+h3 {
+    
+    font-style: italic;
+    font-size: 20px;
+    position: relative;
+    top: 300px;
+    margin-left: 100px;
+  
+}   
+
  .pointer-link a {
     color: #cc080b;
     font-weight: bold;
     font-size: 25px;
     list-style-type: none;
-    display: flex;
-    margin-left: 300px;
-}
-.p2 {
     position: relative;
-    left: 500px;
-    bottom: 30px;
-}
-.p3 {
-    position: relative;
-    left: 1000px;
-    bottom: 60px;
-}
-.p4 {
-    position: relative;
-    left: 1500px;
-    bottom: 80px;
-}
+   top: 500px;
+   width: 300px;
+   margin-left: 400px;
+}   
+
+
+
